# cpdb

./: .gitignore  Dockerfile  LICENSE  README.md  build_tsv2jsonld_cpdb.sh  pyproject.toml  run_flow_tsv2jsonld_cpdb.sh  run_tsv2jsonld_cpdb.sh
src/: column_mapping.json  context.jsonld  cpdb2jsonld.py  settings.py  taxonomy.json  urls.txt
src/column_mapper/: human.json  mouse.json
src/utils/: custom_exception.py  rich_loguru.py  rich_progress.py
